# GameOfLife

./: CMakeLists.txt  README.md  cell.cpp  cell.hpp  conanfile.txt  console_grid_displayer.cpp  console_grid_displayer.hpp  grid.cpp  grid.hpp  grid_displayer.hpp  main.cpp  player.cpp  player.hpp
displayer/: console_grid_displayer.cpp  console_grid_displayer.hpp  grid_displayer.hpp  ncurses_grid_displayer.cpp  ncurses_grid_displayer.hpp
src/: CMakeLists.txt  conanfile.txt  grid.cpp  main.cpp  player.cpp  player.hpp
src/displayer/: grid_displayer.hpp  ncurses_grid_displayer.hpp
